Link igraph library. (I did  "brew install igraph" first)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(KroneckerGraph)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(MPI REQUIRED)
+
+
 include_directories(${MPI_INCLUDE_PATH})
 
 SET(CMAKE_C_COMPILER mpicc)
@@ -13,5 +15,6 @@ SET(CMAKE_C_FLAGS -Drestrict=__restrict__)
 SET(CMAKE_C_FLAGS -O3)
 SET(CMAKE_LINK_DEF_FILE_FLAG -lpthread)
 
-
 add_executable(KroneckerGraph main.cpp ./aml/aml.c ./generator/graph_generator.c ./generator/make_graph.c ./generator/splittable_mrg.c ./generator/utils.c utils.c)
+
+target_link_libraries(KroneckerGraph igraph.a)
